--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Podgorica Environmental HTML Template | Homepage One</title>
+<title>Donate 4 Education | Organization </title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/revolution-slider.css" rel="stylesheet">
@@ -35,8 +35,8 @@
                     <!--Top Left-->
                     <div class="top-left">
                     	<ul class="clearfix">
-                        	<li><span class="icon flaticon-technology-1"></span>+04 2345 6789</li>
-                            <li><span class="icon flaticon-interface"></span>info@podgorica.com</li>
+                        	<li><span class="icon flaticon-technology-1"></span>+8801831803255</li>
+                            <li><span class="icon flaticon-interface"></span>info@donate4education.org</li>
                         </ul>
                     </div>
                     
@@ -323,7 +323,7 @@
                 	<div class="inner-box">
                     	<!--About Title-->
                     	<div class="about-title">
-                        	<h3>About <span class="theme_color">Podgorica</span></h3>
+                        	<h3>About <span class="theme_color">Donate 4 Education</span></h3>
                         	<h2>We Are The Saviours of Planet Earth</h2>
                         </div>
                         <div class="text">Fight against oppression amplify assistance; countries medicine new approaches The Elders Global South advocate organization equal opportunity of vaccine international vulnerable citizens. Lifting people social challenges democracy microloans fight against malnutrition, think tank social innovation global health truth dignity civic engagement. Design thinking diversification efficient recognize potential marginalized communities human potential governance change.</div>
