--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                             <!--Footer Column-->
                         	<div class="footer-column col-md-6 col-sm-6 col-xs-12">
                             	<div class="footer-widget about-widget">
-                                	<div class="footer-logo"><figure><a href="index.html"><img src="images/logo-2.png" alt=""></a></figure></div>
+                                	<div class="footer-logo"><figure><a href="index.html"><img src="images/logo.png" alt=""></a></figure></div>
                                     <div class="widget-content">
                                     	<div class="text">
                                         	<p>Lifting people social challenge democracy micro fight against malnutrition, think tank social innovation global health truth  dignity civic engagement.</p>
